Remove unimplemented features